fixed spacing issues and explicit align

--- a/itunes.search/src/App.css
+++ b/itunes.search/src/App.css
@@ -69,7 +69,6 @@
 
 .card.custom-card {
   border-width: 0px;
-  margin-left: 6px;
 }
 
 .container {
